--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -2,18 +2,23 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My Portfolio</title>
+    <title>Mariana Torres Torres</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
+      <h1>Welcome to my Portfolio!!!</h1>
+      <p>My name is Mariana Torres! I'm a second-year Digital Arts and Sciences Engineering 
+          student at the University of Florida (go gators!). I was born and raised in Caracas, 
+          Venezuela, but now I live in Fort Myers, Florida. Besides coding, I love to paint/draw, 
+          cook, hike, play videogames (Slime Rancher, anyone?), and hanging out with friends. 
+          I'm very excited to be here and learn some cool stuff :)</p>
+      <img src="/images/headshot.jpeg"/>
       <p>Click <a href="/hello">here</a> to see content created by server code.</p>
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
+      <p>Click here to get some random facts about myself:</p>
+      <button onclick="addRandomFunFact()">Click me!</button>
+      <div id="fun-fact-container"></div>
     </div>
   </body>
 </html>
