add navbar and upload assets

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -7,18 +7,78 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <div id="content">
-      <h1>Welcome to my Portfolio!!!</h1>
-      <p>My name is Mariana Torres! I'm a second-year Digital Arts and Sciences Engineering 
-          student at the University of Florida (go gators!). I was born and raised in Caracas, 
-          Venezuela, but now I live in Fort Myers, Florida. Besides coding, I love to paint/draw, 
-          cook, hike, play videogames (Slime Rancher, anyone?), and hanging out with friends. 
-          I'm very excited to be here and learn some cool stuff :)</p>
-      <img src="/images/headshot.jpeg"/>
-      <p>Click <a href="/hello">here</a> to see content created by server code.</p>
-      <p>Click here to get some random facts about myself:</p>
-      <button onclick="addRandomFunFact()">Click me!</button>
-      <div id="fun-fact-container"></div>
+    <div class="navbar">
+      <a href="/">
+        <img
+          src="https://cdn.glitch.com/23f6eeca-cb3d-44f2-9608-0379158305f6%2Fm_logo.png?v=1614288810646"
+          class="logo"
+        />
+      </a>
+      <nav>
+        <ul>
+          <li>
+            <a href="#about">
+              About
+            </a>
+          </li>
+          <li>
+            <a href="#experience">
+              Experience
+            </a>
+          </li>
+          <li>
+            <a href="#projects">
+              Projects
+            </a>
+          </li>
+          <li>
+            <a href="#involvement">
+              Involvement
+            </a>
+          </li>
+          <li>
+            <a href="#contact">
+              Contact
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class="intro">
+      <h2>
+        Hi! My name is
+      </h2>
+      <h1>
+        Mariana Torres Torres
+      </h1>
+      <h1>
+        I'm a Digital Arts and Sciences Engineer
+      </h1>
+    </div>
+    <div id="about">
+      <h1>
+        *something awesome will go here lol*
+      </h1>
+    </div>
+    <div id="experience">
+      <h1>
+        *something awesome will go here lol*
+      </h1>
+    </div>
+    <div id="projects">
+      <h1>
+        *something awesome will go here lol*
+      </h1>
+    </div>
+    <div id="involvement">
+      <h1>
+        *something awesome will go here lol*
+      </h1>
+    </div>
+    <div id="contact">
+      <h1>
+        *something awesome will go here lol*
+      </h1>
     </div>
   </body>
 </html>
