--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -10,7 +10,7 @@
     <div class="navbar">
       <a href="/">
         <img
-          src="https://cdn.glitch.com/23f6eeca-cb3d-44f2-9608-0379158305f6%2Fm_logo.png?v=1614288810646"
+          src="./images/m_logo.png"
           class="logo"
         />
       </a>
@@ -51,9 +51,7 @@
       <h1>
         Mariana Torres Torres
       </h1>
-      <h1>
-        I'm a Digital Arts and Sciences Engineer
-      </h1>
+      <h1 id="typed"></h1>
     </div>
     <div id="about">
       <h1>
