--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -55,27 +55,27 @@
     </div>
     <div id="about">
       <h1>
-        *something awesome will go here lol*
+        Here's where I say something about myself. I don't like the ordeal of being known, but here we are :/
       </h1>
     </div>
     <div id="experience">
       <h1>
-        *something awesome will go here lol*
+        Here is my work experience. It's not much, but it's honest ~ work ~
       </h1>
     </div>
     <div id="projects">
       <h1>
-        *something awesome will go here lol*
+        Here's where I ramble about the SHPE dev team &lt3
       </h1>
     </div>
     <div id="involvement">
       <h1>
-        *something awesome will go here lol*
+        Here's where I ramble about SHPE some more, amongst other things
       </h1>
     </div>
     <div id="contact">
       <h1>
-        *something awesome will go here lol*
+        Go follow me on social media pls :)
       </h1>
     </div>
   </body>
