add favicon and social media links

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Mariana Torres Torres</title>
+    <link rel="icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/483e39b172.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
   </head>
   <body>
@@ -75,8 +77,34 @@
     </div>
     <div id="contact">
       <h1>
-        Go follow me on social media pls :)
+        Contact
       </h1>
+      <h2>
+        Reach out to me if you have any questions, or if you just want to say hi!
+      </h2>
+      <div class="social-media">
+        <a
+          href="https://www.linkedin.com/in/mariana-torres-torres/"
+          class="icons"
+        >
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a
+          href="https://www.instagram.com/marianatorres.t/"
+          class="icons"
+        >
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://github.com/MarianaTorresTorres" class="icons">
+          <i class="fab fa-github"></i>
+        </a>
+        <a
+          href="mailto: mari.torret@gmail.com"
+          class="icons"
+        >
+          <i class="fas fa-envelope"></i>
+        </a>
+      </div>
     </div>
   </body>
 </html>
