--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -47,40 +47,212 @@
       </nav>
     </div>
     <div class="intro">
-      <h2>
-        Hi! My name is
-      </h2>
-      <h1>
-        Mariana Torres Torres
-      </h1>
+      <div>
+        <h2>
+          Hi! My name is
+        </h2>
+        <div class="intro-column">
+          <button onclick="typeButton()">
+            CLICK ME
+          </button>
+        </div>
+        <h1>
+          Mariana Torres Torres
+        </h1>
+      </div>
       <h1 id="typed"></h1>
     </div>
     <div id="about">
-      <h1>
-        Here's where I say something about myself. I don't like the ordeal of being known, but here we are :/
-      </h1>
+      <div class="column">
+        <h1>
+          About Me
+        </h1>
+        <p>
+          Hey, I'm Mariana! I'm a second year Digital Arts and Sciences
+          Engineering student at the University of Florida. I was born and
+          raised in Caracas, Venezuela, but now I am based in Gainesville,
+          Florida. When I'm not coding, I like to draw, paint, cook, play
+          videogames, and read.
+        </p>
+        <p>
+          *I swear there's more to say about me, I'll just write it later lol*
+        </p>
+        <p>
+          Here's some of the languages and frameworks that I use:
+        </p>
+        <div class="about-list">
+          <ul>
+            <li>
+              <span><i class="fas fa-plus"></i></span>JavaScript
+            </li>
+            <li>
+              <span><i class="fas fa-plus"></i></span>C++
+            </li>
+            <li>
+              <span><i class="fas fa-plus"></i></span>Java
+            </li>
+            <li>
+              <span><i class="fas fa-plus"></i></span>HTML & CSS
+            </li>
+            <li>
+              <span><i class="fas fa-plus"></i></span>Processing
+            </li>
+            <li>
+              <span><i class="fas fa-plus"></i></span>Python
+            </li>
+          </ul>
+        </div>
+        <div class="about-list">
+          <ul>
+            <li>
+              <span><i class="fas fa-plus"></i></span>React & React Native
+            </li>
+            <li>
+              <span><i class="fas fa-plus"></i></span>NodeJS
+            </li>
+            <li>
+              <span><i class="fas fa-plus"></i></span>Apollo & GraphQL
+            </li>
+            <li>
+              <span><i class="fas fa-plus"></i></span>MongoDB
+            </li>
+            <li>
+              <span><i class="fas fa-plus"></i></span>Microsoft SQL & MySQL
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="column">
+        <img
+          src="./images/headshot_small.jpeg"
+          class="headshot"
+        />
+        <div class="resume-button">
+          <a
+            href="./files/Torres Torres, Mariana_RESUME.pdf"
+            download="MarianaTorresTorresResume"
+          >
+            <button>
+              GET MY RESUME
+            </button>
+          </a>
+        </div>
+      </div>
     </div>
     <div id="experience">
       <h1>
-        Here is my work experience. It's not much, but it's honest ~ work ~
+        Work Experience
       </h1>
+      <h2>
+        Here is where my work experience is going to be. It's not much, but it's
+        honest ~ work ~
+      </h2>
     </div>
     <div id="projects">
       <h1>
-        Here's where I ramble about the SHPE dev team &lt3
+        Projects
       </h1>
+      <div>
+        <div class="column">
+          <h3>
+            MEMBERSHPEUF.COM
+          </h3>
+          <h2>
+            Senior Software Engineering Director
+          </h2>
+          <p>
+            Membershpe UF is the official website for the UF chapter of the
+            Society of Hispanic Professional Engineers. Our software engineering
+            team created this website to facilitate the management of the point
+            system that our chapter works with. Some additional features are a
+            corporate database, rentals of engineering equipment (like
+            Arduinos), a SHPEito network for members to find other people in
+            their classes/major/year, and a variety of administrative tools for
+            the Executive Board to manage SHPE. All of this was accomplished
+            using the MERNG stack: MongoDB, Express, React, NodeJS, and GraphQL.
+          </p>
+        </div>
+        <div class="column">
+          <img
+            src="./images/corporateDatabaseSHPEUF.png"
+            class="project-img"
+          />
+        </div>
+      </div>
+      <div>
+        <div class="column">
+          <h3>
+            SHPE UF MOBILE APP
+          </h3>
+          <h2>
+            Scrum Master
+          </h2>
+          <p>
+            This is the mobile application that will complement the SHPE UF
+            website. Unlike the website, this app will be user-oriented and
+            provide SHPE UF members greater accesibility to their points,
+            events, and tasks. This project uses the MERNG stack as well, but
+            with React Native. To be launched in September 2021.
+          </p>
+        </div>
+        <div class="column">
+          <div class="column">
+            <img
+              src="./images/loginSHPEapp.png"
+              class="project-img-one"
+            />
+          </div>
+          <div class="column">
+            <img
+              src="./images/WhatsApp Image 2021-03-01 at 11.00.08 PM.jpeg"
+              class="project-img-two"
+            />
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="column">
+          <h3>
+            SOLSTICE PLAZA
+          </h3>
+          <h2>
+            Developer
+          </h2>
+          <p>
+            Solstice Plaza is a Virtual Reality platform especifically designed
+            for students of the University of Florida. Using Maya, EchoAR, and
+            Unity, my team and I were able to create a VR version of UF'S Plaza
+            of the Americas and Library West. Students can join the server and
+            explore the 3D environment, as well as interact with other students
+            virtually. Since the pandemic has taken away the opportunity of
+            living on campus for many students, Solstice Plaza is our way of
+            making that experience accesible once again. Winner of the Hack
+            Solstice 2021 Best Use of EchoAR Category.
+          </p>
+        </div>
+        <div class="column">
+          <img
+            src="./images/plaza and lib west.png"
+            class="project-img"
+          />
+        </div>
+      </div>
     </div>
     <div id="involvement">
       <h1>
-        Here's where I ramble about SHPE some more, amongst other things
+        Involvement
       </h1>
+      <h2>
+        Here's where I rant about girls who code and who knows what else
+      </h2>
     </div>
     <div id="contact">
       <h1>
         Contact
       </h1>
       <h2>
-        Reach out to me if you have any questions, or if you just want to say hi!
+        Reach out to me if you have any questions, or if you just want to say
+        hi!
       </h2>
       <div class="social-media">
         <a
@@ -89,19 +261,13 @@
         >
           <i class="fab fa-linkedin"></i>
         </a>
-        <a
-          href="https://www.instagram.com/marianatorres.t/"
-          class="icons"
-        >
+        <a href="https://www.instagram.com/marianatorres.t/" class="icons">
           <i class="fab fa-instagram"></i>
         </a>
         <a href="https://github.com/MarianaTorresTorres" class="icons">
           <i class="fab fa-github"></i>
         </a>
-        <a
-          href="mailto: mari.torret@gmail.com"
-          class="icons"
-        >
+        <a href="mailto: mari.torret@gmail.com" class="icons">
           <i class="fas fa-envelope"></i>
         </a>
       </div>
