fix comments and improve cursor functionality

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -60,7 +60,10 @@
           Mariana Torres Torres
         </h1>
       </div>
-      <h1 id="typed"></h1>
+      <div class="typed-div">
+        <h1 id="typed"></h1>
+        <span id="cursor">|</span>
+      </div>
     </div>
     <div id="about">
       <div class="column">
@@ -154,9 +157,11 @@
       </h1>
       <div>
         <div class="column">
-          <h3>
-            MEMBERSHPEUF.COM
-          </h3>
+          <a href="https://membershpeuf.netlify.app/">
+            <h3>
+              MEMBERSHPEUF.COM
+            </h3>
+          </a>
           <h2>
             Senior Software Engineering Director
           </h2>
