--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -276,6 +276,12 @@
           <i class="fas fa-envelope"></i>
         </a>
       </div>
+      <form action="/form-handler" method="POST">
+        <h2>Leave me some cute comments here pls:</h2>
+        <textarea name="text-input">hello!</textarea>
+        <br/>
+        <input class="submit-button" type="Submit" />
+      </form>
     </div>
   </body>
 </html>
