--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/483e39b172.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
   </head>
-  <body>
+  <body onload="loadComments()">
     <div class="navbar">
       <a href="/">
         <img
@@ -146,10 +146,46 @@
       <h1>
         Work Experience
       </h1>
-      <h2>
-        Here is where my work experience is going to be. It's not much, but it's
-        honest ~ work ~
-      </h2>
+      <div>
+        <div class="column">
+          <div class="row">
+            <img
+              src="./images/leeLogo.png"
+              class="work-logo"
+            />
+          </div>
+          <div class="row">
+            <h3>
+              Lee County School District
+            </h3>
+            <h2>
+              Application Services Intern
+            </h2>
+            <p>
+              July 2020 - December 2020
+            </p>
+          </div>
+        </div>
+        <div class="column">
+          <div class="row">
+            <img
+              src="./images/ufChemLogo.jpeg"
+              class="work-logo"
+            />
+          </div>
+          <div class="row">
+            <h3>
+              UF Department of Chemistry
+            </h3>
+            <h2>
+              Introduction to Chemistry Teaching Assistant
+            </h2>
+            <p>
+              January 2020-May 2020
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
     <div id="projects">
       <h1>
@@ -282,6 +318,8 @@
         <br/>
         <input class="submit-button" type="Submit" value="SUBMIT"/>
       </form>
+      <hr/>
+      <ul id="comment-list"></ul>
     </div>
   </body>
 </html>
